# development-devcontainer-project-template

./: README.md  pyproject.toml
.cursor/rules/: core.mdc  state.mdc
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
src/: fastapi.py  main.py
