[project]
name = "app"
version = "2025.0.0"
description = ""
authors = [
    {name = "Blake McDonald", email = "BlakeTMcDonald@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
    "typing-extensions>=4.9.0",
    # FastAPI Framework and Dependencies
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.1",
    # AI and Logging
    "openai",
    "tiktoken",
    # HTTP and Data Processing
    "httpx",
    "numpy",
    "pandas",
    # PDF Processing
    "pymupdf",
    "pdfplumber",
    # Debugging
    "debugpy>=1.8.12",
    # Jupyter and Dev Tools
    "setuptools",
    "jupyterlab",
    "rich",
    "pytest",
    "hypothesis",
    # Existing project dependencies
    "agno>=1.4.2",
    "cargo>=0.3",
    "toml-to-requirements>=0.3.0",
    "sqlalchemy>=2.0.40",
    "google-genai>=1.14.0",
    "ghostscript>=0.7",
    "boto3>=1.38.19",
    "virtualenvwrapper>=6.1.1",
    "bat>=0.3.9",
    "pypdf>=5.5.0",
    "json5>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100
# Never enforce `E501` (line length violations)
ignore = ["E501"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D",  # pydocstyle
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Enable docstring checking
select = ["D"]
ignore = ["D100", "D104"]
# Ignore missing docstrings in public modules and packages
extend-ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring rules in tests

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov"
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_support_agent"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/**/*.json",
    "src/**/*.yaml",
    "src/**/*.mdc",
]
exclude = [
    "src/**/__pycache__",
    "src/**/*.pyc",
    "src/**/*.pyo",
    "src/**/*.pyd",
    "src/**/.pytest_cache",
    "src/**/.mypy_cache",
] 

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
